Fix: Removed scrollbar and a few changes in the scroll effect

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,13 @@
 
 @layer base {
   html {
-    scroll-behavior: smooth;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
   }
   body {
     background-color: var(--color-bg);
